refactor: HTTP 처리 안정성 개선